# desktop-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py  server.json
desktop_mcp/: __main__.py  config.py  paths.py  server.py
desktop_mcp/groups/: input_tools.py  observe.py  record.py  window.py
scripts/: list_tools.py
tests/: conftest.py  test_config.py  test_input.py  test_live_smoke.py  test_observe.py  test_record.py  test_server.py  test_window.py
