[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-mcp"
version = "0.1.0"
readme = "README.md"
description = "Windows desktop-control MCP server: screenshot, window mgmt, mouse/keyboard input, and screen-recording. Config-gated tool groups (observe/window/input/record) -- input disabled by default. Local-only, single-machine."
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.4.2",
    "mss==10.2.0",
    "pyautogui==0.9.54",
    "PyGetWindow==0.0.9",
    "pywin32==312",
]

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[tool.setuptools.packages.find]
include = ["desktop_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: real-hardware smoke test, requires DESKTOP_MCP_LIVE=1",
]
